<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity" >
    <item android:id="@+id/wifi"
        android:title="@string/action_wifi"
        android:icon="@drawable/ic_wifi_white_24dp"
        android:orderInCategory="500"
        app:showAsAction="always" />
    <item
        android:title="Add"
        android:icon="@drawable/ic_add_circle_outline_white_24dp"
        android:orderInCategory="500"
        app:showAsAction="always">
        <menu>
            <item android:id="@+id/add_lamp"
                android:title="@string/add_lamp" />
            <item android:id="@+id/add_alarm"
                android:title="@string/add_alarm"/>
        </menu>
    </item>


    <item android:id="@+id/clean_up"
        android:title="@string/clean_up"/>
    <item android:id="@+id/delete_light"
        android:title="@string/delete_lamp_title"/>
    <item android:id="@+id/about"
        android:title="@string/about"/>
    <item android:id="@+id/logOut"
        android:title="@string/sign_out"/>
</menu>
